# ezregex

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  EZ.md  LICENSE  README.md  ez_regex.cpp  ez_regex.h  ezregex.cpp  ezregex.h
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_ez_regex.cpp  bench_ezregex.cpp
fuzz/: CMakeLists.txt  fuzz_ez_regex.cpp  fuzz_ezregex.cpp
fuzz/corpus/: 01_date  02_keyvalue  03_digits  04_email  05_identifier  06_whitespace  07_empty_subject  09_phone  10_negclass
tests/: CMakeLists.txt  test_ez_regex.cpp  test_ezregex.cpp
